--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
 }
 .user__aviability {
   border-radius: 40px;
@@ -82,6 +83,10 @@ img {
 /* Uživatelský text */
 .user__info {
   margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 .user__title {
@@ -97,8 +102,18 @@ img {
 }
 
 /* Udělat seznam se srdíčky místo odrážek */
-.user__hobby {
+.user__hobbies {
   padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  list-style: none;
+}
+
+.user__hobby::before {
+  content: '❤️';
+  margin-right: 4px;
 }
 
 /* Navštívené odkazy jinou barvou */
@@ -107,13 +122,14 @@ img {
 a {
   text-decoration: none;
   color: #007bff;
+  position: relative;
 }
 
-a:hover {
+a:visited {
   color: #0065d1;
 }
 
-.user__button:before {
+a:hover::after {
   content: '';
   width: 100%;
   height: 5px;
@@ -124,6 +140,13 @@ a:hover {
 }
 
 /* Tlačítka */
+.user__buttons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  align-self: stretch;
+  margin: 0 -4px;
+}
 
 .user__button {
   padding: 10px 20px;
